kubernetes/kubernetes-mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: mongo-deployment
 labels:
  app: mongo
spec:
 replicas: 1
 selector:
  matchLabels:
   app: mongo
 template:
  metadata:
   labels:
    app: mongo
  spec:
   containers:
   - name: lexic_mongo
     image: mongo:5.0
     ports:
     - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
 name: mongo-service
spec:
 selector: 
  app: mongo
 ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
