kubernetes/langua_api_gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: langua_api_gateway
  labels:
    app: langua_api_gateway
spec:
  replicas: 1
  revisionHistoryLimit: 10
  minReadySeconds: 5
  selector:
    matchLabels:
      app: langua_api_gateway
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 2
  template:
    metadata:
      labels:
        app: langua_api_gateway
        tier: service
    spec:
      containers:
      - name: langua_api_gateway
        image: "prateeksingh1590/microsvc:1.1"
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: langua_api_gateway
  labels:
    app: langua_api_gateway
    tier: service
spec:
  type: NodePort
  ports:
  - port: 3000
  selector:
    app: langua_api_gateway
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: langua_api_gateway
  labels:
    app: langua_api_gateway
    tier: backend
spec:
  backend:
    serviceName: langua_api_gateway
    servicePort: 3000
