kubernetes/material_microservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: langua_material_microservice
  labels:
    app: langua_material_microservice
spec:
  replicas: 1
  revisionHistoryLimit: 10
  minReadySeconds: 5
  selector:
    matchLabels:
      app: langua_material_microservice
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 2
  template:
    metadata:
      labels:
        app: langua_material_microservice
        tier: service
    spec:
      containers:
      - name: langua_material_microservice
        image: "prateeksingh1590/microsvc:1.1"
        imagePullPolicy: Always
        ports:
        - containerPort: 50053
---
apiVersion: v1
kind: Service
metadata:
  name: langua_material_microservice
  labels:
    app: langua_material_microservice
    tier: service
spec:
  type: NodePort
  ports:
  - port: 50053
  selector:
    app: langua_material_microservice
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: langua_material_microservice
  labels:
    app: langua_material_microservice
    tier: backend
spec:
  backend:
    serviceName: langua_material_microservice
    servicePort: 50053
